# erpnext_expenses

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql.yml
expenses/: __init__.py  hooks.py  modules.txt  version.py
expenses/config/: desktop.py  docs.py
expenses/events/: role.py  workflow.py  workflow_action_master.py  workflow_state.py
expenses/expenses/doctype/expense/: expense.js  expense.json  expense.py  expense_list.js
expenses/expenses/doctype/expense_account/: expense_account.json  expense_account.py
expenses/expenses/doctype/expense_attachment/: expense_attachment.json  expense_attachment.py
expenses/fixtures/: role.json  workflow.json  workflow_action_master.json  workflow_state.json
expenses/libs/: __init__.py  account.py  attachment.py  background.py  cache.py  check.py  common.py  company.py  doctypes.py  entry.py  entry_details.py  exchange.py  expense.py  filter.py  item.py  journal.py  logger.py  realtime.py  request.py  request_details.py  search.py  settings.py  system.py  type.py  update.py
expenses/public/js/: expenses.bundle.js  expenses.datatable.js  expenses.doc_dialog.js  expenses.form_dialog.js  expenses.js  expenses.unique_array.js  expenses_dialog.bundle.js
expenses/setup/: install.py  migrate.py  uninstall.py
expenses/utils/: __init__.py  account.py  attachment.py  cache.py  common.py  doctypes.py  entry.py  expense.py  item.py  journal.py  logger.py  meta.py  reports.py  request.py  search.py  settings.py  type.py  update.py
(+50 files in other folders)
