[project]
name = "expenses"
authors = [
    {name = "Ameen Ahmed (Level Up)", email = "kid1194@gmail.com"}
]
description = "An expenses management module for ERPNext."
keywords = ["frappe", "erpnext", "expenses"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python"
]
requires-python = ">=3.6"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe>=14.0.0",
    "erpnext>=14.0.0"
]

[project.urls]
Documentation = "https://github.com/kid1194/erpnext_expenses"
Source = "https://github.com/kid1194/erpnext_expenses"